# ops-launcher

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
examples/: hosts.yaml
ops_launcher/: __init__.py  actions.py  cli.py  config.py  executor.py  history.py  ssh.py  tui.py  utils.py
scripts/: install.sh
tests/: test_config.py
